# poisson2d

./: CMakeLists.txt  README  README.md  breeze2d.h  breeze2d_interop.h  breeze2d_poisson.h  breeze2d_status.h  breeze2d_timing.h
interop/: dump2db.c  grads.c
poisson2d/: poisson2d.c
poisson2d/fft/: fft.c  fft.h  shutter.h  shutter_c.cpp  shutter_r.c  wrapper.c  wrapper.h
tests/poisson2d_fdiffs/: poisson2d_fdiffs.c
tests/poisson2d_fft/: poisson2d_fft.c
timing/: timing.c
